[workspace]
members = [
    "aoc_2015", 
    "aoc_2016", 
    "aoc_2017", 
    "aoc_2018", 
    "aoc_2019", 
    "aoc_2020", 
    "aoc_2021", 
    "aoc_2022", 
    "aoc_2023",
    "runner",
]
exclude = [
    "new_year"
]
resolver = "2"

[workspace.dependencies]
helper = { git = "https://github.com/mmitton/helper.git" }

[profile.release]
debug = true
