[workspace]
members = [ "aoc_2024", "aoc_2023", "aoc_2022", "aoc_2021", "aoc_2020", "aoc_2019", "aoc_2018", "aoc_2017", "aoc_2016", "aoc_2015", "runner", "new_year" ]
resolver = "2"

[workspace.dependencies]
aoc_2024 = { path = "aoc_2024" }
aoc_2023 = { path = "aoc_2023" }
aoc_2022 = { path = "aoc_2022" }
aoc_2021 = { path = "aoc_2021" }
aoc_2020 = { path = "aoc_2020" }
aoc_2019 = { path = "aoc_2019" }
aoc_2018 = { path = "aoc_2018" }
aoc_2017 = { path = "aoc_2017" }
aoc_2016 = { path = "aoc_2016" }
aoc_2015 = { path = "aoc_2015" }
helper = { git = "https://github.com/mmitton/helper.git" }

[profile.release]
debug = true
