[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_2019 = { version = "0.1.0", path = "aoc_2019" }
aoc_2020 = { version = "0.1.0", path = "aoc_2020" }
aoc_2022 = { version = "0.1.0", path = "aoc_2022" }
aoc_2023 = { version = "0.1.0", path = "aoc_2023" }
chrono = "0.4.31"
clap = "4.4.8"
colored = "2.0.4"
helper = { path = "helper", version = "*" }
