[package]
name = "runner"
version = "0.1.0"
edition = "2021"
default-run = "runner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_2024.workspace = true
aoc_2023.workspace = true
aoc_2022.workspace = true
aoc_2021.workspace = true
aoc_2020.workspace = true
aoc_2019.workspace = true
aoc_2018.workspace = true
aoc_2017.workspace = true
aoc_2016.workspace = true
aoc_2015.workspace = true
helper.workspace = true

[lints.clippy]
all = "warn"
